Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntObjIntObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(5)
        Test(v)
    end

    action Test(Integer var)
        if var:GetValue() = 5
            output "passed"
        end
    end
end
