Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjIntObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(5)
        Test(v)
    end

    action Test(Boolean var)
    end
end
